# extrophi-ecosystem

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT-DISCIPLINE-PROTOCOL.md  AGENT_5_REPORT.md  AGENT_8_REPORT.md  AGENT_DELTA_FILES_CHANGED.txt  AGENT_DELTA_IMPLEMENTATION_REPORT.md  AGENT_DELTA_SUMMARY.md  AGENT_DELTA_TEST_PLAN.md  AGENT_DELTA_UI_CHANGES.md  APPROVAL-STAGE-A.md  BACKUP_IMPLEMENTATION_REPORT.md  CCW_START.md  CHANGELOG.md  CHAT_INTEGRATION_COMPLETE.md  CHAT_UI_INTEGRATION.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_PLAN_UPDATED.md  CONTAINER_BUILD_GUIDE.md  DEPLOYMENT.md  DESIGN-PROPOSAL-V3.0-STAGE-A.md  DOCUMENTATION-DOWNLOAD-PLAN.md  ERROR_RECOVERY_QUICK_START.md  ERROR_RECOVERY_UI_REPORT.md  FRONTEND_CI_REPORT.md  ISSUES_CLOSURE_REPORT.md  NUCLEAR_DEPLOYMENT_REPORT.md  OPENAI_INTEGRATION_TEST.md  ORCHESTRATION.md  PRD-v3.0-STAGE-A.md  PROJECT-DESCRIPTION.md  PROJECT-INSTRUCTIONS.md  PR_DESCRIPTION.md  PR_PODMAN_BUILDS.md  PR_SUMMARY.md  PR_TEMPLATE_ELON_SCRAPER.md  PULL_REQUEST_READY.md  README.md  (+32 more)
admin/: package.json  (+3 more)
backend/: .dockerignore  .env.example  Containerfile  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  scrape_dan_koe.py
backend/analysis/: __init__.py  analyzer.py  prompts.py
backend/api/middleware/: caching.py  security_headers.py  versioning.py
backend/api/routes/: __init__.py  analyze.py  attributions.py  audit.py  bulk.py  health.py  publish.py  query.py  scrape.py  tokens.py  ultra_learning.py  webhooks.py
backend/api/routes/v1/: __init__.py  tokens.py
backend/api/routes/v2/: __init__.py  api_keys.py  query.py
backend/auth/: README.md  __init__.py  api_keys.py
backend/db/: README.md  __init__.py  audit_log.py  connection.py  migrate.py  migrations.py  models.py  performance_indexes.py  repository.py  schema.sql  validate_schema.py  webhooks.py
backend/db/migrations/: 001_add_cards_and_extropy_system.sql  001_backend_module_schema.sql  001_backend_module_schema_rollback.sql  001_rollback.sql  002_api_keys_table.sql  002_api_keys_table_rollback.sql  003_audit_logs_table.sql  003_audit_logs_table_rollback.sql  003_ultra_learning_table.sql  003_ultra_learning_table_rollback.sql  README.md  migrate.py  perf_alpha_optimization.py
backend/docs/: PERFORMANCE_OPTIMIZATION.md  RATE_LIMITING_CACHING.md  README.md
backend/docs/dev/: README.md  bulk-operations.md
backend/docs/pm/: README.md
backend/docs/security/: OWASP_COMPLIANCE.md
backend/graphql/: README.md  __init__.py  context.py  resolvers.py  schema.py
backend/middleware/: __init__.py  audit.py  caching.py  rate_limiter.py
backend/parsers/: README_NAVAL_PARSER.md  __init__.py  base.py  naval.py
backend/parsers/tests/: __init__.py  test_naval_parser.py
backend/queue/: __init__.py  celery_app.py  redis_queue.py  tasks.py
backend/redis_cache/: __init__.py  redis_cache.py
backend/scrapers/: __init__.py  base.py  cache.py  elon.py  rate_limiter.py  registry.py  utils.py
backend/scrapers/adapters/: DAN_KOE_README.md  README_HORMOZI.md  README_NAVAL.md  __init__.py  dan_koe.py  hormozi.py  naval.py  reddit.py  throssell.py  twitter.py  web.py  youtube.py
backend/scrapers/examples/: README_ELON.md  elon_scraper_demo.py
backend/scrapers/tests/: test_cache.py  test_elon_scraper.py  test_naval_scraper.py  test_rate_limiter.py  test_web_scraper.py
backend/security/: __init__.py  audit_log.py  auth.py  crypto.py  dependency_check.py  integrity.py  rate_limiting.py  rbac.py  ssrf_protection.py  validation.py
backend/services/: README.md  README_ULTRA_LEARNING.md  SCRAPER_API_SETUP_REPORT.md  populate_vector_db.py  scraper_api_service.py  test_scraper_api.py  test_vector_search.py  ultra_learning_parser.py  vector_db_service.py
backend/tasks/: __init__.py  bulk_operations.py
backend/tests/: TEST_COVERAGE_REPORT.md  conftest.py  test_analysis.py  test_api.py  test_api_keys.py  test_api_versioning.py  test_audit.py  test_backend_schema.py  test_bulk_operations.py  test_dan_koe_scraper.py  test_db.py  test_extropy_tokens.py  test_graphql.py  test_publish.py  test_rate_limiting_caching.py  test_scraper_api_service.py  test_scrapers.py  test_ultra_learning_parser.py  test_webhooks.py
backend/tests/security/: test_owasp.py
backend/tokens/: __init__.py  extropy.py
backend/vector/: __init__.py  chromadb_client.py  embeddings.py
backend/webhooks/: __init__.py  sender.py
orchestrator/: .dockerignore  .env.example  .gitignore  Containerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
orchestrator/monitoring/: __init__.py  health_checker.py
orchestrator/registry/: README.md  __init__.py  discovery_client.py  service_registry.py
orchestrator/tests/: __init__.py  test_health_checker.py  test_main.py  test_orchestrator.py  test_service_registry.py
src-tauri/: Cargo.toml  HANDOFF_REPORT.md  README.md  build.rs  tauri.conf.json  test_wav_save.sh
src-tauri/benches/: candle_performance.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: cli_test.rs  record_test.rs  test_wav_save.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: build.sh  dev.sh  run-binary.sh  verify-setup.sh
src-tauri/src/: backup.rs  commands.rs  error.rs  export.rs  lib.rs  logging.rs  main.rs  prompts.rs
src-tauri/src/audio/: mod.rs  recorder.rs  wav_writer.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs  schema.sql
src-tauri/src/plugin/: README.md  candle.rs  manager.rs  mod.rs  types.rs  whisper_cpp.rs
src-tauri/src/services/: claude_api.rs  mod.rs  model_manager.rs  openai_api.rs  vad.rs
src-tauri/tests/: test_recording.rs  transcription_integration_test.rs
writer/src-tauri/: Cargo.toml  INTEGRATION_STATUS.md  Info.plist  tauri.conf.json
writer/src-tauri/.cargo/: config.toml
writer/src-tauri/capabilities/: default.json
writer/src-tauri/examples/: cli_test.rs
writer/src-tauri/scripts/: post-bundle.sh
writer/src-tauri/src/: commands.rs  commands_test.rs  error.rs  export.rs  lib.rs  logging.rs  main.rs  prompts.rs
writer/src-tauri/tests/: research_integration_test.rs
(+680 files in other folders)
