[project]
name = "unified-scraper"
version = "0.1.0"
description = "Multi-platform content intelligence engine"
authors = [
    {name = "IAC-032 Team", email = "dev@iamcodio.com"}
]
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "alembic>=1.13.0",

    # Queue & Caching
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Vector Store
    "chromadb>=0.4.0",

    # LLM & Embeddings
    "openai>=1.3.0",

    # Scrapers
    "playwright>=1.40.0",
    "praw>=7.7.0",
    "youtube-transcript-api>=0.6.0",
    "httpx>=0.25.0",

    # Service Discovery
    "python-consul>=1.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=backend --cov-report=term-missing"
