[package]
name = "braindump"
version = "3.0.0"
description = "BrainDump Voice Processor V3.0"
authors = ["IamCodio"]
edition = "2021"

[features]
default = ["whisper"]
whisper = []

[dependencies]
tauri = { version = "2.9", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
candle-core = "0.8"
candle-transformers = "0.8"
candle-nn = "0.8"
hf-hub = "0.3"
tokenizers = "0.20"
parking_lot = "0.12"
rubato = "0.15"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
keyring = "2.3"
dotenv = "0.15"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
pkg-config = "0.3"

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
tempfile = "3.10"

[lib]
name = "braindump"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "braindump"
path = "src/main.rs"
